Тестики
Допилил часть тестов, но некоторые всё ещё не работают из-за ошибки java.io.IOException: Unable to delete file. Если я правильно понял, она выскакивает только на винде, плак